使界面更加简洁直观，同时保持了所有必要的功能。用户现在可以通过状态图标来控制操作模式，使交互更加自然和符合直觉。
## 界面简化与功能整合

### 移除冗余元素
- 移除了"重新开始"按钮及其相关样式，因其功能已被状态图标完全取代
- 移除了已使用小棍的显示，简化了界面

### 状态面板优化
- 保留了红点模式选择器和剩余小棍指示器
- 简化了状态图标的显示结构
- 优化了状态图标的布局和样式
- 调整了进度条的显示效果

## 数据结构改进

- 将 `sticks` 从 Set 改为数组，实现堆栈结构
- 使用 `push()` 和 `pop()` 操作来管理小棍的添加和删除
- 修改 `activePoints` 的使用方式，确保它能按顺序记录点的添加

## 交互逻辑优化

### 模式切换功能
- 将小棍模式切换功能转移到剩余小棍图标上
- 在自由模式下，点击状态图标可以切换对应的操作模式
- 在预设模式下，点击剩余小棍图标可以清除所有小棍

### 简化交互逻辑
- 移除了双击和三击事件的处理，保留单击和长按功能
- 单击：在当前模式下移除最近添加的一个元素
- 长按：以100ms的间隔快速移除元素

### 视觉反馈增强
- 添加按压弹起效果，提供即时视觉反馈
- 在预设模式下，红点图标不显示按压效果，暗示功能不可用
- 为小棍模式添加激活状态样式，与红点模式保持视觉一致性

## 模式切换优化

### 自由模式显示逻辑
- 在自由模式下显示已铺设的小棍总数，而非无穷符号
- 确保从预设模式切换到自由模式时数据正确初始化为0
- 在点模式下也更新小棍数量显示，保持数据一致性

### 预设模式功能
- 只显示剩余小棍和剩余小棍数量
- 点击剩余小棍按钮可以清零
- 移除了已使用小棍的显示

## 新增功能函数

- `removeRecentPoint()` - 移除最近添加的红点
- `removeRecentPoints(n)` - 移除最近添加的n个红点
- `startRapidPointRemove()` - 开始快速移除红点
- `removeStick(stick)` - 移除特定小棍或最近添加的小棍
- `removeRecentSticks(n)` - 移除最近添加的n根小棍
- `startRapidRemove()` - 开始快速移除小棍
- `stopRapidRemove()` - 停止快速移除
- `addPressEffect()` - 添加按压视觉效果

## 修复问题

- 修复了从预设模式切换到自由模式时，红点和小棍统计数据延迟更新的问题
- 在难度选择事件监听器中添加特殊处理，确保立即清除所有数据
- 在initGame函数中添加自由模式下初始化时清除所有数据的逻辑

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                 <input type="number" id="game-number" min="1" value="1" class="game-number-input">
                 <span class="game-number-total">/ 1</span>
             </div>
-            <button id="restart-button" class="mode-button">重新开始 | Restart</button>
             
             <!-- 图形化状态指示器 | Graphical Status Indicators -->
             <div class="status-icons">
@@ -33,19 +32,12 @@
                     </div>
                     <div class="status-value"><span id="current-points">0</span></div>
                 </div>
-                <!-- 小棍模式选择器 | Stick Mode Selector -->
-                <div class="status-item" id="stick-mode-selector">
-                    <div class="status-icon-container">
-                        <div class="status-icon stick-icon"></div>
-                    </div>
-                    <div class="status-value"><span id="used-sticks">0</span></div>
-                </div>
                 <!-- 剩余小棍指示器 | Remaining Sticks Indicator -->
                 <div class="status-item" id="remaining-sticks-item">
                     <div class="status-icon-container">
                         <div class="progress-bar" id="remaining-sticks-bar"></div>
                     </div>
-                    <div class="status-value"><span id="remaining-sticks">10</span></div>
+                    <div class="status-value"><span id="remaining-sticks-count">10</span></div>
                 </div>
             </div>
         </div>
