--- a/index.html
+++ b/index.html
@@ -108,22 +108,16 @@
                 <ul>
                     <li>简易模式 | Easy Mode: 
                         <ul>
-                            <li>共6个关卡 | 6 levels in total</li>
-                            <li>每关配置不同数量的红点和小棍限制 | Different number of points and stick limits for each level</li>
                             <li>小棍限制范围：8-24根 | Stick limits range: 8-24 sticks</li>
                         </ul>
                     </li>
                     <li>中等模式 | Medium Mode:
                         <ul>
-                            <li>共2个关卡 | 2 levels in total</li>
-                            <li>每关使用7个红点 | 7 points in each level</li>
                             <li>小棍限制范围：22-27根 | Stick limits range: 22-27 sticks</li>
                         </ul>
                     </li>
                     <li>困难模式 | Hard Mode:
                         <ul>
-                            <li>共2个关卡 | 2 levels in total</li>
-                            <li>使用9-12个红点 | 9-12 points per level</li>
                             <li>小棍限制范围：27-35根 | Stick limits range: 27-35 sticks</li>
                         </ul>
                     </li>
@@ -158,7 +152,7 @@
                     <li>小棍模式操作 | In stick mode:
                         <ul>
                             <li>点击一个点后，相邻的可连接点会显示浅蓝色高亮 | After clicking a point, adjacent connectable points will be highlighted in light blue</li>
-                            <li>点击高亮点即可建立连接 | Click a highlighted point to create connection</li>
+                            <li>点击相邻的高亮点可建立连接 | Click a highlighted point to create connection</li>
                             <li>点击已放置的小棍可以移除 | Click placed sticks to remove them</li>
                             <li>点击已选中的点可以取消选择 | Click selected point to deselect it</li>
                             <li>长按小棍图标可以快速移除多个小棍 | Long press stick icon to quickly remove multiple sticks</li>
